[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/sprites/gui/mainmenu/new_game.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/gui/mainmenu/options.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/gui/mainmenu/illustration.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/gui/mainmenu/version.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/gui/mainmenu/continue.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/gui/mainmenu/exit.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/gui/mainmenu/title.png" type="Texture" id=7]
[ext_resource path="res://code/gd/MainMenu.gd" type="Script" id=8]

[sub_resource type="ImageTexture" id=2]

[sub_resource type="ImageTexture" id=3]

[sub_resource type="ImageTexture" id=4]

[sub_resource type="ImageTexture" id=5]

[node name="MainMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 120
custom_constants/margin_top = 80
custom_constants/margin_left = 120
custom_constants/margin_bottom = 80
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" type="ColorRect" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 120.0
margin_bottom = 80.0
grow_horizontal = 0
grow_vertical = 0
rect_clip_content = true
color = Color( 0, 0, 0, 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 920.0
margin_bottom = 560.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 120.0
margin_bottom = 480.0

[node name="Title" type="TextureRect" parent="HBoxContainer/VBoxContainer"]
margin_right = 120.0
margin_bottom = 80.0
texture = ExtResource( 7 )

[node name="Continue" type="TextureButton" parent="HBoxContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 120.0
margin_bottom = 124.0
focus_neighbour_top = NodePath("../Exit")
texture_normal = ExtResource( 5 )
texture_hover = SubResource( 2 )

[node name="NewGame" type="TextureButton" parent="HBoxContainer/VBoxContainer"]
margin_top = 128.0
margin_right = 120.0
margin_bottom = 168.0
texture_normal = ExtResource( 1 )
texture_hover = SubResource( 3 )

[node name="Options" type="TextureButton" parent="HBoxContainer/VBoxContainer"]
margin_top = 172.0
margin_right = 120.0
margin_bottom = 212.0
texture_normal = ExtResource( 2 )
texture_hover = SubResource( 4 )

[node name="Exit" type="TextureButton" parent="HBoxContainer/VBoxContainer"]
margin_top = 216.0
margin_right = 120.0
margin_bottom = 256.0
focus_neighbour_bottom = NodePath("../Title")
texture_normal = ExtResource( 6 )
texture_hover = SubResource( 5 )

[node name="Version" type="TextureRect" parent="HBoxContainer/VBoxContainer"]
margin_top = 260.0
margin_right = 120.0
margin_bottom = 300.0
texture = ExtResource( 4 )

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer"]
margin_left = 124.0
margin_right = 354.0
margin_bottom = 480.0

[node name="Illustration" type="TextureRect" parent="HBoxContainer/CenterContainer"]
margin_top = 165.0
margin_right = 230.0
margin_bottom = 315.0
texture = ExtResource( 3 )
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/NewGame" to="." method="_on_New_Game_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
